# fmcw-web

./: .gitignore  README.md  README_v2.md  pyproject.toml  start.py  start.sh  start_v2.py  test_frontend.py  test_full_stack.py
backend/: main.py  requirements.txt
frontend/: index.html
frontend-react/: index.html  package.json  vite.config.js
frontend-react/src/: App.jsx
frontend-react/src/components/: AngleFFTChart.jsx  AngleModule.jsx  ErrorBoundary.jsx  IntroModule.jsx  ParamsModule.jsx  RangeDopplerChart.jsx  RangeFFTChart.jsx  RangeModule.jsx  SimModule.jsx  TabNavigation.jsx  VelocityModule.jsx
frontend-react/src/services/: api.js  websocket.js
frontend-react/src/styles/: global.css
frontend-react/src/utils/: math.js
frontend/css/: style.css
frontend/js/: utils.js
frontend/modules/: angle.html  intro.html  params.html  range.html  sim.html  velocity.html
