[project]
name = "fmcw-edu-website"
version = "0.1.0"
description = ""
authors = [
    {name = "1203-lu",email = "zcguo_2@stu.xidian.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "numpy==1.26.3",
    "python-multipart==0.0.6",
    "websockets==12.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
